--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>BHANU THE <br />
+						<h1>BHANU <br>THE <br />
 						ANALYST PORTFOLIO</h1>
 						<p>Data Analyst skilled in SQL, Python, Tableau and Power BI <br><a href="https://www.linkedin.com/in/mr-bhanu/">@BhanuTheAnalyst</a><br />
 						</p>
