--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>BHANU <br>THE <br />
-						ANALYST PORTFOLIO</h1>
+						<h1>BHANU <br>THE
+						ANALYST  <br />PORTFOLIO</h1>
 						<p>Data Analyst skilled in SQL, Python, Tableau and Power BI <br><a href="https://www.linkedin.com/in/mr-bhanu/">@BhanuTheAnalyst</a><br />
 						</p>
 						<ul class="actions">
