--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">MOVIE CORRELATION WITH PYTHON<br />
+										<h2><a href="https://app.powerbi.com/groups/me/reports/c33ecbb7-ebf1-4883-9454-2ac23103f855/ReportSection7fc67bbdcc21aff21256?experience=power-bi">CAR PRICE DISTRIBUTION ANALYSIS<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\movies.jpg" alt="" /></a>
+									<a href="https://app.powerbi.com/groups/me/reports/c33ecbb7-ebf1-4883-9454-2ac23103f855/ReportSection7fc67bbdcc21aff21256?experience=power-bi" class="image fit"><img src="images\movies.jpg" alt="" /></a>
 									<p>In this project we look at what variables effect the gross revenue from movies.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://app.powerbi.com/groups/me/reports/c33ecbb7-ebf1-4883-9454-2ac23103f855/ReportSection7fc67bbdcc21aff21256?experience=power-bi" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
