--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>BHANU <br>THE
 						ANALYST  <br />PORTFOLIO</h1>
-						<p>Data Analyst skilled in SQL, Python, Tableau and Power BI <br><a href="https://www.linkedin.com/in/mr-bhanu/">@BhanuTheAnalyst</a><br />
+						<p>Data Analyst skilled in Excel, SQL, Python, Tableau and Power BI <br><a href="https://www.linkedin.com/in/mr-bhanu/">@BhanuTheAnalyst</a><br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -71,13 +71,13 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="#">DATA EXPLORATION IN SQL<br />
+										<h2><a href="https://github.com/Bhanu-goel/COVID-DATA-EXPLORATION">DATA EXPLORATION IN SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\covid.jpg" alt="" /></a>
+									<a href="https://github.com/Bhanu-goel/COVID-DATA-EXPLORATION" class="image fit"><img src="images\covid.jpg" alt="" /></a>
 									<p>In this project we use SQL Server to explore global COVID19 data.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/Bhanu-goel/COVID-DATA-EXPLORATION" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
