--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/mr-bhanu/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/Bhanu-goel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/Bhanu86644368" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						</ul>
 					</nav>
 
@@ -56,13 +55,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Bhanu-goel/Excel-projects/blob/main/excel/Bike%20sales%20Dashboard/bike%20sales%20dashboard.png">DATA CLEANING IN SQL<br />
+									<h2><a href="https://github.com/Bhanu-goel/NASHVILLE-HOUSING-DATA-CLEANING">DATA CLEANING IN SQL<br />
 									</a></h2>
 									<p>In this project we take raw housing data and transform it in SQL Server. to make it more usable for analysis.</p>
 								</header>
-								<a href="https://github.com/Bhanu-goel/Excel-projects/blob/main/excel/Bike%20sales%20Dashboard/bike%20sales%20dashboard.png" class="image main"><img src="images\housing.jpg" alt="" /></a>
+								<a href="https://github.com/Bhanu-goel/NASHVILLE-HOUSING-DATA-CLEANING" class="image main"><img src="images\housing.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Bhanu-goel/Excel-projects/blob/main/excel/Bike%20sales%20Dashboard/bike%20sales%20dashboard.png" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/Bhanu-goel/NASHVILLE-HOUSING-DATA-CLEANING" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
